# ai-interview-platform

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml  test.db
backend/app/: config.py  database.py  main.py
backend/app/core/: exceptions.py  security.py
backend/app/dependencies/: auth.py
backend/app/models/: __init__.py  attempt.py  generated_paper.py  question.py  response.py  resume_profile.py  user.py
backend/app/routers/: auth.py  code.py  dashboard.py  questions.py  resume.py  theory.py
backend/app/schemas/: auth.py  question.py  resume.py
backend/app/services/: auth_service.py  followup_generator.py  gemini_client.py  judge0_client.py  profile_builder.py  question_generator.py  rag_evaluator.py  resume_parser.py  retriever.py  scoring_service.py  skill_extractor.py
backend/knowledge_base/: chroma_client.py  kb_ingestion.py
backend/knowledge_base/sources/dsa/: dsa_fundamentals.txt
backend/knowledge_base/sources/ml/: ml_fundamentals.txt
backend/knowledge_base/sources/oop/: oop_fundamentals.txt
backend/knowledge_base/sources/os/: os_fundamentals.txt
backend/knowledge_base/sources/react/: react_fundamentals.txt
backend/migration/: env.py
backend/migration/versions/: 7a41137ed3b9_initial_schema.py  cbba4a6a40b6_add_indexes.py
backend/scripts/: ingest_knowledge_base.py  seed_questions.py
backend/tests/: conftest.py
backend/tests/integration/: test_interview_flow.py
backend/tests/unit/: test_auth.py  test_rag_evaluator.py  test_resume_parser.py  test_scoring.py
frontend/: package.json  pnpm-lock.yaml
(+21 files in other folders)
